# rivals2-log-parser

./: .gitignore  AGENTS.md  CHANGES.md  DATABASE.md  README.md  REVIEWS.md  TODO.md  alt.py  app.py  build.py  build_linux.py  config.py  config_template.ini  env_template  icon.xpm  log_parser.py  log_parser_optimized.py  main.py  mainqt6.py  match_duration.py  ping_check.py  pyproject.toml  pyvenv.cfg  repo_analysis.md  requirements.txt  simple_parser.py
db/: database.py
queries/: drop_table_matches.sql  get_matches copy.sql  get_matches.sql  plot_elo.sql
tests/: test_db.py
utils/: calc_elo.py  folders.py  log.py  match.py
